sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:3: error: '<-' expected but ')' found.
	for (i>-getNombreValeurs()-2 to 0) {
                                         ^AlgBubbleSort2:8: error: illegal start of simple expression
}
^